# Ray-Tracer-From-Scratch

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: hittable.h  hittable_list.h  material.h  rtweekend.h  sphere.h  vec3.h
src/: main.cpp
